Fix UTF-8 output
git-svn-id: file:///home/svn/acars2006@6118 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a